subscribe add hero -> add message

--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,1 +1,12 @@
-<p>message works!</p>
+<div *ngIf='messageService.messages.length'>
+  <h2>Messages</h2>
+  <button class="clear"
+  (click)="messageService.clear()">
+    clear
+  </button>
+  <!--{{}} - po za <>, wrzucamy wartosci zmiennych-->
+  <div *ngFor='let message of messageService.messages'>
+    {{message}}
+  </div>
+</div>
+<div>{{messages$ | async}}</div>
