--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>{{title}}</h1>
 <nav>
   <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/dashboard">Dash</a>
 </nav>
 <router-outlet></router-outlet>
 <app-message></app-message>
